--- a/index.html
+++ b/index.html
@@ -46,18 +46,39 @@
                     </p>
                 </header>
 
+                <h2 id="D20240529">May 29th, 2024</h2>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Geometry Dash [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240528">May 28th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Manual [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> OpenRCT2 [<a href="apworlds.html#OpenRCT2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> OpenRCT2 [<a href="apworlds.html#OpenRCT2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Bowser's Fury [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Castle Crashers [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> CastleMinerZ [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Guitar Hero 3: Legends of Rock [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Resident Evil 5 Gold Edition [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Skyrim Special Edition: Legacy of the Dragonborn [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>New Manual APWorld</strong> Castlevania Symphony of the Night (Sega Saturn Maria Mode) [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Polyrhythm Mania [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
