--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (165)</h2>
+                <h2>APWorlds (167)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -100,6 +100,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/StripesOO7/alttp-ap-poptracker-pack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/A%20Link%20to%20the%20Past/multiworld/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/827141303330406408">Link</a>]</li>
+                </ul>
+
+                <h3><span id="ANIMALWELL"></span> ANIMAL WELL (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Aquaria"></span> Aquaria (PC)</h3>
@@ -612,7 +620,13 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1127025077196701828">Link</a>]</li>
                 </ul>
 
-                <span id="J"></span>
+                <h3><span id="J"></span><span id="JakAndDaxter"></span> Jak and Daxter (PS2)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/ArchipelaGOAL/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/ArchipelaGOAL/Archipelago/blob/main/worlds/jakanddaxter/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1138467653552451606">Link</a>]</li>
+                </ul>
 
                 <h3><span id="K"></span><span id="KeepTalkingAndNobodyExplodes"></span> Keep Talking and Nobody Explodes (PC)</h3>
 
@@ -1178,6 +1192,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Tranquilite0/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/powerlord/soulblazer-emotracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Tranquilite0/Archipelago/blob/soulblazer/worlds/soulblazer/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1209689725057761310">Link</a>]</li>
                 </ul>
@@ -1186,6 +1201,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1237999589907234938/1239603025056763975">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/GirambQuamb/spelunker_archipelago_tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong></li> [<a href="https://discord.com/channels/731205301247803413/1237999589907234938">Link</a>]
                 </ul>
 
