--- a/index.html
+++ b/index.html
@@ -46,10 +46,39 @@
                     </p>
                 </header>
 
+                <h2 id="D20240530">May 30th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Manual Rhythm Game Randomizer [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Splatoon 3 - Alterna [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Wizard101 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240529">May 29th, 2024</h2>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> A Dance of Fire and Ice [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Kirby and the Forgotten Land [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Jak and Daxter [<a href="apworlds.html#JakAndDaxter">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New Manual APWorld</strong> Geometry Dash [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> SSX 3 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Spelunker [<a href="apworlds.html#Spelunker">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240528">May 28th, 2024</h2>
