--- a/apworlds.html
+++ b/apworlds.html
@@ -803,7 +803,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Tracker/strong> [<a href="https://github.com/BrianCumminger/megamanx-ap-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/BrianCumminger/megamanx-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1134349743984742520">Link</a>]</li>
                 </ul>
 
@@ -811,6 +811,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/BrianCumminger/megamanx3-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1148331400542568558">Link</a>]</li>
                 </ul>
 
@@ -1298,7 +1299,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Tracker</strong> 1.x.x versions [<a href="https://github.com/PoryGone/SMW_AP_Tracker/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Super%20Mario%2064/setup/en">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Super%20Mario%20World/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593173089398846">Link</a>]</li>
                 </ul>
 
