--- a/index.html
+++ b/index.html
@@ -46,17 +46,53 @@
                     </p>
                 </header>
 
+                <h2 id="D20240531">May 31st, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts RE: Chain of Memories [<a href="apworlds.html#KingdomHeartsREChainOfMemories">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Dexsanity [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Fighting Game Builder [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Putt-Putt [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong>Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240530">May 30th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Metroid Map Rando [<a href="apworlds.html#SuperMetroidMapRando">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Manual Rhythm Game Randomizer [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Splatoon 3 - Alterna [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Spyro the Dragon [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Mario Odyssey - Festival% [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Wizard101 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Spelunker [<a href="apworlds.html#Spelunker">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240529">May 29th, 2024</h2>
