--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (167)</h2>
+                <h2>APWorlds (168)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -223,8 +223,8 @@
 
                 <ul>
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1236097987265036339">Link</a>]</li>
-                    <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1236097987265036339">Link</a>]</li>
-                    <li><strong>Optional Game Mod</strong> [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/TRPG/MoreMap/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/Jay/CutsceneSkip/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/Yuri/GimmeMyBoost/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/viliger/DisableAnnoyingCutscenes/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/tari/FastTravel/">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/TRPG/BRC_Archipelago/">Link</a>]</li>
+                    <li><strong>Optional Game Mods</strong> [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/TRPG/MoreMap/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/Jay/CutsceneSkip/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/Yuri/GimmeMyBoost/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/viliger/DisableAnnoyingCutscenes/">Link</a>] [<a href="https://thunderstore.io/c/bomb-rush-cyberfunk/p/tari/FastTravel/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1141808261348212836/1158243448554528831">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1141808261348212836">Link</a>]</li>
                 </ul>
@@ -278,6 +278,13 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/DorkmasterFlek/SOTN-AP-MapTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://docs.google.com/document/d/1agsX7VpqmAkJPs0bIESKiKgD_VH1ssRKPtNbBmW2b8k">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1108439196156317818">Link</a>]</li>
+                </ul>
+
+                <h3><span id="CaveStory"></a> Cave Story (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/kl3cks7r/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1083474864150695956">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Celeste"></a> Celeste (PC)</h3>
@@ -871,6 +878,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/DeamonHunter/ArchipelagoMuseDash/releases">Link</a>]</li>
                     <li><strong>Prerelease APWorld</strong> v1.4.7+ [<a href="https://github.com/DeamonHunter/ArchipelagoMuseDash/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1148331097705414796/1246639847041662987">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Muse%20Dash/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148331097705414796">Link</a>]</li>
                 </ul>
@@ -1084,6 +1092,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://thunderstore.io/package/Sneaki/Archipelago/">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> Download them from the Discord thread [<a href="https://discord.com/channels/731205301247803413/884926818480705586/1246720305653874828">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/bluejello42/Ror2-AP-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Risk%20of%20Rain%202/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/884926818480705586">Link</a>]</li>
@@ -1256,7 +1265,7 @@
                 <h3><span id="Subversion"></span> Subversion (Super Metroid Hack) (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1198824491892080760">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1246654393114300508">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1146853510378422272/1160264628614484089">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1146853510378422272">Link</a>]</li>
                 </ul>
@@ -1264,7 +1273,7 @@
                 <h3><span id="SuperJunkoid"></span> Super Junkoid (Super Metroid Hack) (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1232070825167945840">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1246510023899742260">Link</a>]</li>
                     <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1232070825167945840">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1196920710724071555">Link</a>]</li>
                 </ul>
@@ -1282,7 +1291,7 @@
                 <h3><span id="SuperMarioLand2"></span> Super Mario Land 2 (GB)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1182783218404040814/1243950876792721469">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1182783218404040814/1246902212085682206">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Alchav/Archipelago/blob/mario-land-2/worlds/marioland2/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1182783218404040814">Link</a>]</li>
                 </ul>
