--- a/index.html
+++ b/index.html
@@ -46,14 +46,83 @@
                     </p>
                 </header>
 
-                <h2 id="D20240601">June 1st, 2024</h2>
+                <h2 id="D20240602">June 2nd, 2024</h2>
 
                 <ul>
-                    <li><strong>Core Update Merged</strong> Remove Universally Unique ID Requirements (Per-Game Data Packages) [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/1933">Link</a>]</li>
+                    <li><strong>APWorld Update</strong>ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong>Super Mario Land 2 [<a href="apworlds.html#SuperMarioLand2">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Bomb Rush Cyberfunk [<a href="apworlds.html#BombRushCyberfunk">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lingo [<a href="apworlds.html#Lingo">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Bowser's Fury [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Vampire Survivors [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Cave Story [<a href="apworlds.html#CaveStory">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Risk of Rain 2 [<a href="apworlds.html#RiskOfRain2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Risk of Rain 2 [<a href="apworlds.html#RiskOfRain2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Final Fantasy 5 Career Day [<a href="apworlds.html#FinalFantasy5CareerDay">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240601">June 1st, 2024</h2>
+
+                <ul>
+                    <li><strong>AP Release Candidate</strong> 0.5.0 RC1 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1246487481931661365">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter [<a href="apworlds.html#JakAndDaxter">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rabi-Ribi [<a href="apworlds.html#RabiRibi">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Subversion (Super Metroid Hack) [<a href="apworlds.html#Subversion">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Core Update Merged</strong> Remove Universally Unique ID Requirements (Per-Game Data Packages) [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/1933">Link</a>]</li>
+                    <li><strong>Core Update Merged</strong> Webhost: Sphere Tracker [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3412">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Kirby Super Star Ultra [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Minecraft - Super Hostile Adventure Maps [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Minecraft Suffering [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong>Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240531">May 31st, 2024</h2>
