--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
                     </p>
                 </header>
 
+                <h2 id="D20240603">June 3rd, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Splatoon 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> ARMS [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Yu-Gi-Oh! Forbidden Memories [<a href="apworlds.html#YuGiOhForbiddenMemories">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240602">June 2nd, 2024</h2>
 
                 <ul>
@@ -77,6 +92,7 @@
 
                 <ul>
                     <li><strong>Tracker Update</strong> Final Fantasy 5 Career Day [<a href="apworlds.html#FinalFantasy5CareerDay">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240601">June 1st, 2024</h2>
