--- a/index.html
+++ b/index.html
@@ -46,10 +46,35 @@
                     </p>
                 </header>
 
+                <h2 id="D20240604">June 4th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Cave Story [<a href="apworlds.html#CaveStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240603">June 3rd, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong>A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong>Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>APWorld Update</strong>Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Noita [<a href="apworlds.html#Noita">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Dead By Daylight (Killer) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Generic Manual for Level-Based Games [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Splatoon 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Vampire Survivors [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
