--- a/index.html
+++ b/index.html
@@ -46,12 +46,36 @@
                     </p>
                 </header>
 
+                <h2 id="D20240605">June 5th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Castlevania: Symphony of the Night [<a href="apworlds.html#CastlevaniaSymphonyOfTheNight">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update</strong> Meritous [<a href="apworlds.html#Meritous">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240604">June 4th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Cave Story [<a href="apworlds.html#CaveStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keep Talking and Nobody Explodes [<a href="apworlds.html#KeepTalkingAndNobodyExplodes">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Update Merged</strong> Risk of Rain 2: <em>Add Support for New Stage</em> [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3436">Link</a>]</li>
                 </ul>
 
                 <ul>
