--- a/index.html
+++ b/index.html
@@ -46,10 +46,32 @@
                     </p>
                 </header>
 
+                <h2 id="D20240607">June 7th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter [<a href="apworlds.html#JakAndDaxter">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Blasphemous [<a href="apworlds.html#Blasphemous">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Minecraft Suffering [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pikuniku [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Skyrim Special Edition: Legacy of the Dragonborn [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240606">June 6th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Ocarina of Time but it's just Master Quest Water Temple [<a href="apworlds.html#OcarinaOfTimeMQWaterTemple">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
@@ -65,6 +87,8 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Blast Corps [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Minecraft Suffering [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Wizard101 [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
@@ -111,7 +135,7 @@
                 </ul>
 
                 <ul>
-                    <li><strong>Manual APWorld Update</strong> New Super Mario Brox Wii [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> New Super Mario Bros Wii [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Putt-Putt [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
