--- a/index.html
+++ b/index.html
@@ -46,6 +46,47 @@
                     </p>
                 </header>
 
+                <h2 id="D20240609">June 9th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240608">June 8th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy 6 Worlds Collide [<a href="apworlds.html#FinalFantasy6WorldsCollide">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Core Update Merged</strong> CommonClient: Command history and echo [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3236">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Plants vs. Zombies [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Putt-Putt [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Puyo Puyo Tetris 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Smash Ultimate Quickplay [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Pokemon Crystal [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3494">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240607">June 7th, 2024</h2>
 
                 <ul>
