--- a/apworlds.html
+++ b/apworlds.html
@@ -1022,6 +1022,7 @@
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/Akashortstack/Psychonauts_AP/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Akashortstack/PsychoRando/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Mysteryem/Psychonauts_AP_PopTracker/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://docs.google.com/document/d/1b7QOnOLmTSvdC7A1YK3bsSmhtSOsAMs0XF5j-tyE6Zw/edit?usp=sharing">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191273397976584212">Link</a>]</li>
                 </ul>
 
@@ -1202,7 +1203,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Tranquilite0/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://github.com/powerlord/soulblazer-emotracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/powerlord/soulblazer-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Tranquilite0/Archipelago/blob/soulblazer/worlds/soulblazer/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1209689725057761310">Link</a>]</li>
                 </ul>
