--- a/index.html
+++ b/index.html
@@ -46,10 +46,44 @@
                     </p>
                 </header>
 
+                <h2 id="D20240610">June 10th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240609">June 9th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cave Story [<a href="apworlds.html#CaveStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Mario Kart Wii [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Sky: Children of the Light [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Farmcraft: The Minecraft Farming Manual [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240608">June 8th, 2024</h2>
