--- a/index.html
+++ b/index.html
@@ -46,19 +46,41 @@
                     </p>
                 </header>
 
+                <h2 id="D20240611">June 11th, 2024</h2>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240610">June 10th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy 6 Worlds Collide [<a href="apworlds.html#FinalFantasy6WorldsCollide">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> The Legend of Zelda - Tears of the Kingdom [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240609">June 9th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Cave Story [<a href="apworlds.html#CaveStory">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
