--- a/index.html
+++ b/index.html
@@ -46,10 +46,24 @@
                     </p>
                 </header>
 
+                <h2 id="D20240612">June 12th, 2024</h2>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240611">June 11th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong>Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> The Beatles: Rock Band [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240610">June 10th, 2024</h2>
