--- a/index.html
+++ b/index.html
@@ -46,16 +46,44 @@
                     </p>
                 </header>
 
+                <h2 id="D20240613">June 13th, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Arctic Eggs [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> CTR: Crash Team Racing [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Popup Dungeon [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Yoshi's Island [<a href="apworlds.html#YoshisIsland">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240612">June 12th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cave Story [<a href="apworlds.html#CaveStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                </ul>
 
                 <ul>
                     <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Minecraft - Decked Out 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Outer Wilds [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Pokemon Red and Blue [<a href="apworlds.html#PokemonRedAndBlue">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240611">June 11th, 2024</h2>
 
                 <ul>
-                    <li><strong>APWorld Update</strong>Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -63,6 +91,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New Manual APWorld</strong> Inscryption [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> The Beatles: Rock Band [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
