--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (167)</h2>
+                <h2>APWorlds (169)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -186,6 +186,7 @@
 
                 <ul>
                     <li><strong>APWorld + Connector</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Ozone31/banjo-tooie-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/blob/main/worlds/banjo_tooie/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1135352499172286505">Link</a>]</li>
                 </ul>
@@ -368,6 +369,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/Br00ty/DS3_AP_Maptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Dark%20Souls%20III/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1005246392329052220">Link</a>]</li>
+                </ul>
+
+                <h3><span id="DiddyKongRacing"></a> Diddy Kong Racing (N64)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Connector</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/blob/v0.1.0/worlds/diddy_kong_racing/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1057754627795337387">Link</a>]</li>
                 </ul>
 
                 <h3><span id="DLCQuest"></span> DLC Quest (PC)</h3>
@@ -793,6 +802,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/BrianCumminger/megaman2-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Silvris/Archipelago/blob/mm2/worlds/mm2/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1141248361316503553">Link</a>]</li>
                 </ul>
@@ -1107,6 +1117,14 @@
                     <li><strong>Game Mod</strong> [<a href="https://github.com/ThePhar/RogueLegacyRandomizer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Rogue%20Legacy/rogue-legacy/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/929585237695029268">Link</a>]</li>
+                </ul>
+
+                <h3><span id="RustedMoss"></span> Rusted Moss (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/dgrossmann144/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/dgrossmann144/Archipelago/blob/main/worlds/rusted_moss/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1239286100472758302">Link</a>]</li>
                 </ul>
 
                 <h3><span id="S"></span><span id="Satisfactory"></span> Satisfactory (PC)</h3>
