--- a/index.html
+++ b/index.html
@@ -46,15 +46,51 @@
                     </p>
                 </header>
 
+                <h2 id="D20240614">June 14th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Pokemon Snap [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Mega Man 2 [<a href="apworlds.html#MegaMan2">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240613">June 13th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Arctic Eggs [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> CTR: Crash Team Racing [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Minecraft Suffering [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Popup Dungeon [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>New APWorld</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Killing Floor 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                     <li><strong>Tracker Update</strong> Yoshi's Island [<a href="apworlds.html#YoshisIsland">Link</a>]</li>
                 </ul>
 
