--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (169)</h2>
+                <h2>APWorlds (171)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -182,7 +182,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1211521722881286164">Link</a>]</li>
                 </ul>
 
-                <h3><span id="B"></span><span id="BanjoTooie"></a> Banjo Tooie (N64)</h3>
+                <h3><span id="B"></span><span id="Balatro"></a> Balatro (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BurndiL/BalatroAP/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1217203888717828307">Link</a>]</li>
+                </ul>
+
+                <h3><span id="BanjoTooie"></a> Banjo Tooie (N64)</h3>
 
                 <ul>
                     <li><strong>APWorld + Connector</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/releases">Link</a>]</li>
@@ -574,7 +581,7 @@
                 <h3><span id="Hammerwatch"></span> Hammerwatch (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1232531162791018536">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1251362300477309059">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago-Mod-Installer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1072687192360624218/1228893356596265000">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Parcosmic/Hammerwatch-Archipelago/blob/dev/worlds/hammerwatch/docs/setup_en.md">Link</a>]</li>
@@ -805,6 +812,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/BrianCumminger/megaman2-ap-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Silvris/Archipelago/blob/mm2/worlds/mm2/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1141248361316503553">Link</a>]</li>
+                </ul>
+
+                <h3><span id="MegaMan3"></span> Mega Man 3 (NES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Silvris/Archipelago/blob/mm3/worlds/mm3/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1250369456048177152">Link</a>]</li>
                 </ul>
 
                 <h3><span id="MegaManBattleNetwork3"></span> Mega Man Battle Network 3 (GBA)</h3>
