--- a/index.html
+++ b/index.html
@@ -46,10 +46,33 @@
                     </p>
                 </header>
 
+                <h2 id="D20240615">June 15th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240614">June 14th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -57,11 +80,20 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New APWorld</strong> Mega Man 3 [<a href="apworlds.html#MegaMan3">Link</a>]</li>
                     <li><strong>New APWorld</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>New Manual APWorld</strong> Diddy Kong Racing [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New Tracker</strong> Mega Man 2 [<a href="apworlds.html#MegaMan2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240613">June 13th, 2024</h2>
