--- a/apworlds.html
+++ b/apworlds.html
@@ -320,7 +320,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Download</strong> [<a href="https://github.com/SunCatMC/ChecksFinder/releases">Link</a>]</li>
+                    <li><strong>Game Download</strong> [<a href="https://github.com/jonloveslegos/ChecksFinder/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/ChecksFinder/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959282474746282014">Link</a>]</li>
                 </ul>
@@ -1200,6 +1200,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://www.speedrun.com/shivers/resources">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/blazik-barth/Shivers-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Shivers/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192237130005610586">Link</a>]</li>
                 </ul>
