--- a/index.html
+++ b/index.html
@@ -46,18 +46,78 @@
                     </p>
                 </header>
 
-                <h2 id="D20240615">June 15th, 2024</h2>
+                <h2 id="D20240616">June 16th, 2024</h2>
 
                 <ul>
-                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>AP Release Candidate</strong> 0.5.0 RC2 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1251987702853664809">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Update</strong> ChecksFinder [<a href="apworlds.html#ChecksFinder">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Dragon Ball Z: Budokai Tenkaichi 3 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Little Inferno [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Sky: Children of the Light [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Ultimate Marvel vs. Capcom 3 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Yume Nikki 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Shivers [<a href="apworlds.html#Shivers">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon Red and Blue [<a href="apworlds.html#PokemonRedAndBlue">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240615">June 15th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Rusted Moss [<a href="apworlds.html#RustedMoss">Link</a>]</li>
+                
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Kirby: Triple Deluxe [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New APWorld</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Psychonauts [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3546">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Pokemon Platinum [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Ultimate Marvel vs. Capcom 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
