--- a/index.html
+++ b/index.html
@@ -46,14 +46,42 @@
                     </p>
                 </header>
 
+                <h2 id="D20240619">June 19th, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Geometry Dash [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240618">June 18th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Air Delivery [<a href="apworlds.html#AirDelivery">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> TTTTTT [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Super Mario 64 [<a href="apworlds.html#SuperMario64">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240617">June 17th, 2024</h2>
@@ -136,6 +164,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New Manual APWorld</strong> Minesveeper [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Yume Nikki 2 [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
