--- a/apworlds.html
+++ b/apworlds.html
@@ -114,6 +114,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/SporyTike/ANIMAL-WELL-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
                 </ul>
@@ -1476,6 +1477,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/TRPG0/ArchipelagoULTRAKILL/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/BowserCrusher/UltrakillPoptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/TRPG0/ArchipelagoULTRAKILL/blob/main/apworld/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1123371409339584532">Link</a>]</li>
                 </ul>
