--- a/apworlds.html
+++ b/apworlds.html
@@ -160,6 +160,7 @@
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1229014956771643522">Link</a>]</li>
                     <li><strong>Game Download</strong> [<a href="https://www.maddymakesgames.com/">Link</a>]</li>
                     <li><strong>Game Mod</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1231120951366783027">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/ladybunne/AnUntitledStory_PopTrackerPack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1194062970230165554/1215523955952193607">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1194062970230165554">Link</a>]</li>
                 </ul>
@@ -1435,7 +1436,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> 5.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
-                    <li><strong>Beta APWorld</strong> 0.4.7 releases [<a href="https://github.com/NewSoupVi/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> 0.5.0 releases [<a href="https://github.com/NewSoupVi/Archipelago/releases">Link</a>]</li>
                     <li><strong>Beta Game Mod</strong> 6.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/NewSoupVi/witness_archipelago_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Witness/setup/en">Link</a>]</li>
