--- a/index.html
+++ b/index.html
@@ -46,10 +46,48 @@
                     </p>
                 </header>
 
+                <h2 id="D20240622">June 22nd, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240621">June 21st, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Castlevania: Symphony of the Night [<a href="apworlds.html#CastlevaniaSymphonyOfTheNight">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Generic Manual for Level-Based Games [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Minecraft - Super Hostile Adventure Maps [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Minesveeper [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Plants vs. Zombies [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Will You Snail? [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Final Fantasy Crystal Chronicles [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> An Untitled Story [<a href="apworlds.html#AnUntitledStory">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240620">June 20th, 2024</h2>
